# my-first-agent-langgraph

./: .env.example  .gitignore  Dockerfile  README.md  checkpoints.db-shm  checkpoints.db-wal  interview_reports.db  pyproject.toml
.tmp/: agent-evals-langsmith-summary.json  ci-interview-eval-target-summary.json  ci-rag-eval-summary.json  interview-eval-target-summary.json  phase4-rag-eval-summary.json  rag-eval-summary.json  ragas-optional-summary.json  trajectory-summary.json
EmbeddingBenchmark/: benchmark_results.json  benchmark_results_10k.json  benchmark_results_4x.json  benchmark_results_prod.json
Plan/: langgraph-node-split-plan.md  rag-recall-refactor-plan.md
leetcode/: leetcode.py
scripts/: direct_download.py  dl.py  download_embedding_models.py  download_models_robust.py  expand_datasets.py  expand_to_10k.py  expand_to_production.py  export_milvus_questions.py  migrate_question_metadata.py  refresh-official-docs.py  run_answer_evaluation_worker.py  run_full_benchmark.ps1  run_report_generation_worker.py  weighted_ranking.py
src/app/: __init__.py  config.py  langsmith_tracing.py  main.py  sse.py  telemetry.py
tests/: test_health.py
tests/contract/: test_mastra_sse_compat.py  test_mastra_stream_request.py  test_unit00_golden_transcripts.py
tests/evals/: run_embedding_model_benchmark.py  run_interview_eval_target.py  run_langsmith_interview_eval.py  run_rag_eval.py  test_agent_evals_adapter.py  test_deepeval_gate.py  test_eval_dataset_schema.py  test_eval_judge_config.py  test_eval_target_contract.py  test_langsmith_eval_mapping.py  test_rag_metrics.py  test_ragas_mapping.py  test_trajectory_evaluator.py
tests/integration/: test_interview_inline_report_generation.py  test_interview_short_flow.py  test_report_api.py  test_runtime_dependencies_smoke.py
tests/unit/: test_answer_evaluation_enqueue.py  test_answer_evaluation_runtime.py  test_answer_evaluation_schema.py  test_answer_evaluation_worker.py  test_checkpoint_store.py  test_embedding_model_benchmark.py  test_evaluation_report_reader.py  test_final_report_completion.py  test_follow_up_generation.py  test_follow_up_memory.py  test_interview_graph.py  test_interview_initialization_pipeline.py  test_interview_memory_retriever.py  test_interview_memory_summary.py  test_interview_memory_tool.py  test_interview_state_machine.py  (+19 more)
(+69 files in other folders)
