[project]
name = "my-first-agent-langgraph"
version = "0.1.0"
description = "Python LangGraph runtime for the interview agent migration."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "langgraph>=1.2.4",
  "langgraph-checkpoint-sqlite>=3.1.0",
  "langchain>=1.0.0",
  "langchain-openai>=1.0.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "pymilvus>=3.0.0",
  "redis>=6.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
  "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
