[project]
name = "my-first-agent-langgraph"
version = "0.1.0"
description = "Python LangGraph runtime for the interview agent migration."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "langgraph>=1.2.4",
  "langgraph-checkpoint-sqlite>=3.1.0",
  "langchain>=1.0.0",
  "langchain-deepseek>=1.1.0",
  "langchain-openai>=1.0.0",
  "langsmith",
  "opentelemetry-api>=1.0.0",
  "opentelemetry-sdk>=1.0.0",
  "opentelemetry-exporter-otlp-proto-http>=1.0.0",
  "opentelemetry-instrumentation-fastapi>=0.0.0",
  "opentelemetry-instrumentation-requests>=0.0.0",
  "opentelemetry-instrumentation-redis>=0.0.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "pymilvus>=3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
  "httpx>=0.27.0",
]
eval = [
  "agentevals",
  "ragas",
  "deepeval",
  "langchain-community<0.4",
  "sentence-transformers>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
